# fips

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml  package-linux.yml
benches/: bloom.rs
docs/: README.md
docs/design/: README.md  fips-architecture.md  fips-configuration.md  fips-design.md  fips-gossip-protocol.md  fips-intro.md  fips-ipv6-adapter.md  fips-link-layer.md  fips-links.md  fips-mesh-layer.md  fips-mesh-operation.md  fips-protocol-flow.md  fips-routing.md  fips-session-layer.md  fips-session-protocol.md  fips-software-architecture.md  fips-spanning-tree.md  fips-state-machines.md  fips-transport-layer.md  fips-tun-driver.md  fips-wire-formats.md  fips-wire-protocol.md  spanning-tree-dynamics.md
examples/docker-network/: .gitignore  Dockerfile  README.md  docker-compose.yml
examples/docker-network/configs/: node.template.yaml
examples/docker-network/configs/topologies/: mesh-public.yaml  mesh.yaml
examples/docker-network/scripts/: build.sh  generate-configs.sh  iperf-test.sh  ping-test.sh
examples/two-node-udp/: README.md
packaging/debian/: build-deb.sh  copyright  fips-dns.service  fips.service  fips.tmpfiles  postinst  postrm  prerm
packaging/systemd/: build-tarball.sh
src/: bloom.rs  cache.rs  config.rs  dns.rs  identity.rs  lib.rs  main.rs  node.rs  noise.rs  protocol.rs  tree.rs  tun.rs
src/bloom/: tests.rs
src/cache/: coord_cache.rs
src/config/: mod.rs  node.rs  transport.rs
src/identity/: address.rs  auth.rs  local.rs  node_addr.rs  peer.rs  tests.rs
src/mmp/: metrics.rs  mod.rs  receiver.rs  sender.rs
src/node/: bloom.rs  handlers.rs  lifecycle.rs  mod.rs  retry.rs  routing_error_rate_limit.rs  session.rs  session_wire.rs  tests.rs  tree.rs  wire.rs
src/node/handlers/: discovery.rs  dispatch.rs  encrypted.rs  forwarding.rs  handshake.rs  mmp.rs  mod.rs  rx_loop.rs  session.rs  timeout.rs
src/node/tests/: bloom.rs  discovery.rs  forwarding.rs  handshake.rs  mod.rs  routing.rs  session.rs  spanning_tree.rs  unit.rs
src/noise/: handshake.rs  mod.rs  tests.rs
src/peer/: active.rs  connection.rs  mod.rs
src/protocol/: discovery.rs  filter.rs  link.rs  mod.rs  session.rs  tree.rs
src/transport/: mod.rs  udp.rs
src/transport/udp/: mod.rs  socket.rs
src/tree/: state.rs  tests.rs
src/upper/: icmp.rs  mod.rs  tun.rs
testing/: README.md
testing/chaos/: .gitignore  Dockerfile  README.md
testing/chaos/configs/: node.template.yaml
testing/chaos/scenarios/: bottleneck-parent.yaml  chaos-10.yaml  churn-10.yaml  churn-20.yaml  cost-avoidance.yaml  cost-mixed-7node.yaml  cost-reeval.yaml  depth-vs-cost.yaml  mixed-technology.yaml  smoke-10.yaml
testing/chaos/scripts/: build.sh  chaos.sh
testing/chaos/sim/: __init__.py  __main__.py  compose.py  config_gen.py  control.py  docker_exec.py  keys.py  links.py  logs.py  netem.py  nodes.py  runner.py  scenario.py  topology.py  traffic.py
testing/k8s/: Dockerfile  README.md
testing/k8s/scripts/: build.sh
testing/sidecar/: .env  .gitignore  Dockerfile  Dockerfile.app  README.md  docker-compose.yml  entrypoint.sh
testing/sidecar/scripts/: build.sh
testing/static/: .env  .gitignore  README.md  docker-compose.yml
testing/static/configs/topologies/: chain.yaml
testing/static/scripts/: build.sh  derive-keys.py  generate-configs.sh  iperf-test.sh  netem.sh
www/: index.html
