[package]
name = "fips"
version = "0.1.0"
edition = "2024"
description = "A distributed, decentralized network routing protocol for mesh nodes connecting over arbitrary transports"
license = "MIT"
authors = ["Johnathan Corgan <jcorgan@corganlabs.com>"]
repository = "https://github.com/jmcorgan/fips"
readme = "README.md"

[features]
default = ["full"]
full = ["tun-device", "control", "dns", "cli", "ethernet"]
core = []  # identity, noise, protocol, tree, bloom, cache, mmp, peer, transport/udp, utils, config
tun-device = ["dep:tun", "dep:rtnetlink", "dep:libc"]
control = []
dns = ["dep:simple-dns"]
cli = ["dep:clap", "dep:dirs"]
ethernet = []

[dependencies]
secp256k1 = { version = "0.30", features = ["rand", "global-context"] }
sha2 = "0.10"
hkdf = "0.12"
chacha20poly1305 = "0.10"
rand = "0.10.0"
thiserror = "2.0"
bech32 = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
dirs = { version = "6.0", optional = true }
hex = "0.4"
clap = { version = "4.5", features = ["derive"], optional = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tun = { version = "0.8.5", features = ["async"], optional = true }
libc = { version = "0.2", optional = true }
rtnetlink = { version = "0.20.0", optional = true }
tokio = { version = "1", features = ["rt", "macros", "signal", "sync", "net", "time"] }
futures = "0.3"
simple-dns = { version = "0.11.2", optional = true }
socket2 = { version = "0.6.2", features = ["all"] }

[dev-dependencies]
tempfile = "3.15"
criterion = { version = "0.8.2", features = ["html_reports"] }

[[bin]]
name = "fips"
path = "src/bin/fips.rs"
required-features = ["cli", "tun-device", "control"]

[[bin]]
name = "fipsctl"
path = "src/bin/fipsctl.rs"
required-features = ["cli", "control"]
